Changed the logic for some methods so that its fitting with the SonarCloud issues.